# collektions

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/collektions/: __init__.py  _iterable.py  _mapping.py  _sequence.py  preconditions.py  shadow.py
src/collektions/ext/asyncio/: __init__.py  _iterable.py
src/peculiar_audience/: __init__.py  _defaults.py  _iterable.py  _mapping.py  _sequence.py  _types.py
tests/: test__iterable.py  test__mapping.py  test__sequence.py  test_preconditions.py  test_shadow.py
tests/ext/asyncio/: test__iterable.py
